Yaml/exchange.yaml
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exchange-deployment
  labels:
    app: exchange
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exchange
  template:
    metadata:
      labels:
        app: exchange
    spec:
      containers:
        - name: exchange-server
          image: <YOUR-REGISTRY>/exchange:v1
          ports:
            - containerPort: 3002
          volumeMounts:
            - name: nfs-pvc-volume-1
              mountPath: /exchange/library
            - name: nfs-pvc-volume-2
              mountPath: /exchange/db
      volumes:
        - name: nfs-pvc-volume-1
          persistentVolumeClaim:
            claimName: nfs-pvc-lib
        - name: nfs-pvc-volume-2
          persistentVolumeClaim:
            claimName: nfs-pvc-db

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: exchange-service
spec:
  type: ClusterIP
  selector:
    app: exchange
  ports:
    - port: 3002
      targetPort: 3002
