Yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamer-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/router.entrypoints: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: exchange-service
            port:
              number: 3002
      - path: /upload
        pathType: Prefix
        backend:
          service:
            name: exchange-service
            port:
              number: 3002
